--- a/css/schwamm.css
+++ b/css/schwamm.css
@@ -440,3 +440,12 @@ details {
     margin-top: 5vh;
   }
 
+  #lightbox {
+    position: fixed;
+    z-index: 500;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    display: none;
+  }
