--- a/css/schwamm.css
+++ b/css/schwamm.css
@@ -425,11 +425,15 @@ details {
  .lang {
 
     width: 80vw;
+    margin-top: 5vh;
+    margin-bottom: 10vh;
   }
 
   .kurz {
 
     width: 60vw;
+    margin-top: 5vh;
+    margin-bottom: 10vh;
   }
 
   footer{
